adding updates for PS project

--- a/GlobalBehaviorandComponents/templates/components/template-footer.html
+++ b/GlobalBehaviorandComponents/templates/components/template-footer.html
@@ -31,7 +31,8 @@
                 </div>
                 <hr class="my-5" />
                 <div class="row align-items-center">
-                    <div class="col-md-6 small">Copyright &copy; {{ config.settings.app_name }} &middot; {{ config.app_version }}</div>
+                    <div class="col-md-6 small">
+                        Copyright © 2022 USPS. All Rights Reserved.</div>
                     <div class="col-md-6 text-md-right small">
                         &middot;
                         <a href="javascript:void(0);">Privacy Policy</a>
