--- a/_ecommerce/templates/ecommerce/navitems.html
+++ b/_ecommerce/templates/ecommerce/navitems.html
@@ -7,8 +7,8 @@
                     <a class="nav-link dropdown-toggle" href="/ecommerce/registration" role="button">Register</a>
                     {% else %}
                     <a class="nav-link dropdown-toggle" href="/registration" role="button">Register</a>
-                    {% endif %}
-                    <a class="nav-link dropdown-toggle" href="/ecommerce/apply" role="button">Apply for Financing</a>
+                    <!--{% endif %}
+                    <a class="nav-link dropdown-toggle" href="/ecommerce/apply" role="button">Apply for Financing</a>-->
                 </li>
             </ul>
         </div>
