--- a/_ecommerce/templates/ecommerce/profile.html
+++ b/_ecommerce/templates/ecommerce/profile.html
@@ -76,12 +76,12 @@
             <div class="modal-dialog modal-dialog-centered" role="document">
                 <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalCenterTitle">Sign Up Now</h5><br>
+                            <h5 class="modal-title" id="exampleModalCenterTitle">USPS Privacy Policy</h5><br>
                         </div>
                         <div class="modal-body" id="mfamodalbody">
                             <h3>Website usage terms and conditions</h3>
-                            <p>Welcome to our website. If you continue to browse and use this website, you are agreeing to comply with and be bound by the following terms and conditions of use, which together with our privacy policy govern [business name]&rsquo;s relationship with you in relation to this website. If you disagree with any part of these terms and conditions, please do not use our website.</p>
-                            <p>The term &lsquo;[business name]&rsquo; or &lsquo;us&rsquo; or &lsquo;we&rsquo; refers to the owner of the website whose registered office is [address]. Our company registration number is [company registration number and place of registration]. The term &lsquo;you&rsquo; refers to the user or viewer of our website.</p>
+                            <p>Welcome to USPS.com. If you continue to browse and use this website, you are agreeing to comply with and be bound by the following terms and conditions of use, which together with our privacy policy govern United States Postal Service&rsquo;s relationship with you in relation to this website. If you disagree with any part of these terms and conditions, please do not use our website.</p>
+                            <p>The term &lsquo;United States Postal Service&rsquo; or &lsquo;us&rsquo; or &lsquo;we&rsquo; refers to the owner of the website whose registered office is 2970 Market St., Philadelphia, Pennsylvania. Our company registration number is 00913511268. The term &lsquo;you&rsquo; refers to the user or viewer of our website.</p>
                             <p>The use of this website is subject to the following terms of use:</p>
                             <ul>
                             <li>The content of the pages of this website is for your general information and use only. It is subject to change without notice.</li>
@@ -92,7 +92,6 @@
                             <li>All trademarks reproduced in this website, which are not the property of, or licensed to the operator, are acknowledged on the website.</li>
                             <li>Unauthorised use of this website may give rise to a claim for damages and/or be a criminal offence.</li>
                             <li>From time to time, this website may also include links to other websites. These links are provided for your convenience to provide further information. They do not signify that we endorse the website(s). We have no responsibility for the content of the linked website(s).</li>
-                            <li>Your use of this website and any dispute arising out of such use of the website is subject to the laws of England, Northern Ireland, Scotland and Wales.</li>
                             </ul>
                         </div>
                         <div class="modal-footer">
