--- a/GlobalBehaviorandComponents/templates/manageusers.html
+++ b/GlobalBehaviorandComponents/templates/manageusers.html
@@ -7,7 +7,7 @@
                     <div class="icon-stack icon-stack-lg bg-primary text-white"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-users"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="9" cy="7" r="4"></circle><path d="M23 21v-2a4 4 0 0 0-3-3.87"></path><path d="M16 3.13a4 4 0 0 1 0 7.75"></path></svg></div>
                     <div class="ml-3">
                         <h2 class="mb-0">Account</h2>
-                        <p class="lead mb-0">Manage Users</p>
+                        <p class="lead mb-0">Manage External Users</p>
                     </div>
                 </div>
                 <div class="card border-bottom">
@@ -32,6 +32,7 @@
                             {% endif %}
                             <h2 class="mr-2" style="margin-top:8px">{{ group_title }}</h2>
                             {% if group_title|trim == "All users in your organization"  %}
+                                <button type="button" class="btn btn-secondary ml-auto" onclick="window.location.href = 'managesmsverification';">Send SMS</button>
                                 <button type="button" class="btn btn-secondary ml-auto" onclick="window.location.href = 'manageuserscreateupdate';">Create User</button>
                             {% else %}
                                 <button type="button" class="btn btn-secondary ml-auto" onclick="window.location.href = 'manageuserscreateupdate?group_id={{user_group['id']}}';">Create User in {{ group_title }}</button>
