--- a/_ecommerce/templates/ecommerce/index.html
+++ b/_ecommerce/templates/ecommerce/index.html
@@ -7,10 +7,10 @@
             <div class="card-body p-0">
                 <div class="row no-gutters">
                     <div class="col-lg-6 p-5">
-                        <a class="badge badge-marketing badge-primary-soft badge-pill text-primary mb-3" href="/ecommerce/apply">Get financing now!</a>
+                        <a class="badge badge-marketing badge-primary-soft badge-pill text-primary mb-3" href="#">New to USPS.com?</a>
                          <h1>{{ config.settings.app_slogan }}</h1></a>
                         <p>{{ config.settings.app_subslogan|safe }}</p>
-                        <a class="text-arrow-icon small" href="#">Learn more<i data-feather="arrow-right"></i></a>
+                        <a class="text-arrow-icon small" href="/registration">Sign up now<i data-feather="arrow-right"></i></a>
                     </div>
                     <div class="col-lg-6 align-self-stretch bg-img-cover d-none d-lg-flex" style='background-image: url("{{ config.settings.app_banner_img_1 }}")'></div>
                 </div>
@@ -19,22 +19,22 @@
         <hr class="my-4" />
         <div class="row mb-5">
             <div class="col-lg-4">
-                <h6>New Products</h6>
+                <h6>Buy stamps</h6>
                 <hr class="my-4" />
-                <p class="text-gray-600 small mb-4">Get ready for our new products!</p>
+                <p class="text-gray-600 small mb-4">Get ready for our new designs!</p>
                 <a class="text-dark mb-4" href="#"><h5>See our new line.</h5></a>
             </div>
            <div class="col-lg-4">
-                <h6>Fast and Free Shipping</h6>
+                <h6>Fast and Accurate Shipping</h6>
                 <hr class="my-4" />
-                <p class="text-gray-600 small mb-4">Free shipping on all orders!</p>
+                <p class="text-gray-600 small mb-4">Reliable Shipping Done Right</p>
                 <a class="text-dark mb-4" href="#"><h5>Click here to see terms.</h5></a>
             </div>
           <div class="col-lg-4">
               
                 <h6>Member Benefits</h6>
                 <hr class="my-4" />
-                <p class="text-gray-600 small mb-4">Get points on every purchase!</p>
+                <p class="text-gray-600 small mb-4">Request a Package Pickup</p>
                 <a class="text-dark mb-4" href="#"><h5>Sign up today.</h5></a>
             </div>
         </div>
